# shadowprism

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  install.sh  ninelives.md
cli/: go.mod  go.sum  main.go
cli/cmd/: agent.go  bot.go  chat.go  config.go  gui.go  market.go  pay.go  reinstall.go  root.go  shield.go  swap.go  test_mix.go  update.go
cli/internal/agent/: agent.go
cli/internal/embed/: embed.go
cli/internal/sidecar/: client.go  config.go  manager.go
cli/internal/ui/: tui.go
core/: Cargo.toml
core/src/: api.rs  main.rs
core/src/adapters/: market.rs  mod.rs  privacy_cash.rs  radr.rs  range.rs  rpc.rs  silent_swap.rs  starpay.rs
core/src/db/: mod.rs  watchdog.rs
core/src/keystore/: mod.rs
core/src/middleware/: mod.rs
