[package]
name = "shadowprism-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
reqwest = "0.13.1"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["auth", "util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
