[package]
name = "shadowprism-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4.43", features = ["serde"] }
home = "0.5.12"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-client = "3.0.0"
solana-sdk = { version = "3.0.0", features = ["full"] }
solana-system-interface = { version = "3.0.0", features = ["bincode", "std"] }
tokio = { version = "1.49.0", features = ["full", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["auth", "util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
